infra/ambassador/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: sa
      containers:
        - name: app
          image: asia.gcr.io/catalog-8c920686/ambassador
          ports:
            - name: http
              containerPort: 80
            - name: http-admin
              containerPort: 8877
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 400Mi
          livenessProbe:
            httpGet:
              path: /ambassador/v0/check_alive
              port: 8877
            initialDelaySeconds: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ambassador/v0/check_ready
              port: 8877
            initialDelaySeconds: 30
            periodSeconds: 3
