infra/ambassador/deploy/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
spec:
#  type: ClusterIP
  type: LoadBalancer
  ports:
    - name: http
#      port: 80
      port: 8888
      targetPort: http-admin
