infra/ambassador/deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
