infra/ambassador/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: catalog.slamdev.net
      http:
        paths:
          - backend:
              serviceName: svc
              # TODO try to use named port
              servicePort: 80
